--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>phpとvbaで業務システムの開発・保守を経験。プログラマーとして主にコーディングを担当してきたが、最近ではシステムへの機能追加要望に対して顧客と相談をし要件を決定したり、開発面では実装リード・インフラ設計なども行う。</p>"
+resume_header_intro: "<p>phpとvbaで業務システムの開発・保守を経験。コーディングだけでなくインフラ設計や、システムへの機能追加要望に対して顧客と相談をし要件をまとめる作業も行う。</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
