--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,3 @@
 # links
-- url: "#"
-  description: Springfield Jazz Enthusiasts
-- url: "#"
-  description: Springfield Young Professionals
+- url: "https://androidpug.com"
+  description: 技術ブログ
